# LLM4BBO

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: base.yaml  offline_rl.yaml  online_rl.yaml  sft.yaml  test.yaml  train_offline.yaml  train_online.yaml
conf/llm/: qwen3-4b-instruct.yaml  qwen3-4b.yaml
scripts/: download.sh  evaluate.sh  test.sh  train_offline.sh  train_offline_rl.sh  train_online.sh  train_online_rl.sh  train_online_rl_server.sh  train_sft.sh  vllm_serve.sh
scripts/hf/: download.sh  evaluate.sh  train_offline_rl.sh  train_online_rl.sh  train_sft.sh  vllm_serve.sh
src/: dataset.py  patches.py  prompt.py  resolver.py  test.py  thinking_budget.py  train_offline.py  train_offline_rl.py  train_online.py  train_online_rl.py  train_sft.py  trainer.py
src/llm4bbo/: patches.py
src/llm4bbo/dataset/: __init__.py  build.py  prompt.py
src/llm4bbo/reward/: __init__.py  gaussian_process_improved.py
src/llm4bbo/trainer/: evaluate.py  offline_rl_trainer.py  online_rl_trainer.py  sft_trainer.py  thinking_budget.py  utils.py
src/llm4bbo/trainer/config/: evaluate.yaml  offline_rl_trainer.yaml  online_rl_trainer.yaml  sft_trainer.yaml
src/llm4bbo/trainer/config/llm/: qwen3-0.6b.yaml  qwen3-4b.yaml
src/llm4bbo/trainer/hf/: evaluate.py  offline_rl_trainer.py  online_rl_trainer.py  sft_trainer.py  thinking_budget.py
src/llm4bbo/trainer/hf/config/: evaluate.yaml  offline_rl_trainer.yaml  online_rl_trainer.yaml  sft_trainer.yaml
src/llm4bbo/trainer/hf/config/llm/: qwen3-4b.yaml
