[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm4bbo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.12.0",
    "datasets==4.5.0",
    "design-bench==2.0.20",
    "gpytorch==1.15.1",
    "hydra-core==1.3.2",
    "morphing-agents==1.5.1",
    "numpy==2.1.1",
    "omegaconf==2.3.0",
    "scikit-learn==1.8.0",
    "tinker==0.15.0",
    "tinker-cookbook @ git+https://github.com/thinking-machines-lab/tinker-cookbook.git@main",
    "torch==2.9.0",
    "tqdm==4.67.3",
    "transformers==4.57.6",
    "trl==0.28.0",
    "vllm==0.12.0",
    "wandb==0.24.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm4bbo = ["**/*.yaml"]
