[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm4bbo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.12.0",
    "bitsandbytes==0.49.2",
    "datasets==4.5.0",
    "design-bench==2.0.20",
    "gpytorch==1.15.1",
    "hydra-core==1.3.2",
    "kernels==0.13.0",
    "morphing-agents==1.5.1",
    "numpy==2.1.1",
    "omegaconf==2.3.0",
    "scikit-learn==1.8.0",
    "torch==2.9.0",
    "tqdm==4.67.3",
    "transformers==4.57.6",
    "trl==0.29.1",
    "vllm==0.12.0",
    "wandb==0.24.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm4bbo = ["data/**/*", "trainer/config/**/*"]
